k8s/gitops/infrastructure/istio/main/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  infrastructure:
    annotations:
      service.beta.kubernetes.io/azure-pip-name: ${GATEWAY_PIP_NAME}
      service.beta.kubernetes.io/azure-load-balancer-resource-group: ${RG_MAIN}
      service.beta.kubernetes.io/port_80_health-probe_protocol: tcp
      service.beta.kubernetes.io/port_443_health-probe_protocol: tcp
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "*.${DOMAIN_NAME}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.${DOMAIN_NAME}"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
